# qwen-asr-rs

./: Cargo.toml  README.md
public/: index.html
src/: audio.rs  decoder.rs  encoder.rs  lib.rs  main.rs  model.rs  preset.rs  tokenizer.rs  transcribe.rs  weights.rs
