[package]
name = "qwen-asr-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.18"
tokenizers = { version = "0.22", default-features = false }
serde_json = "1.0.149"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.2" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.2" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.9.2" }
hound = "3"
rubato = "0.16"
rustfft = "6"
clap = { version = "4", features = ["derive"] }
rayon = "1"
num_cpus = "1"
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
